--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="Keywords" Content="我们的爱情沙漏 ">
   <meta NAME="Description" CONTENT="时光沙漏">
-<title>婷宝</title>
+<!--<title>婷宝</title>-->
+<title>FUCK YOU</title>
 
 <style type="text/css">
 @font-face {
@@ -34,7 +35,8 @@
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					boy~马啸  girl~余婷<br/>
+<!--					boy~马啸  girl~余婷<br/>-->
+					boy~糖果  girl~？？<br/>
 				</div>
 			</div>
 			<div style="position: fixed;bottom:5px;right:10px; font-family: 'sans-serif';font-size: 16px;color: #666;">
