--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					我们相恋已有：
+					我们相识已有：
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
