字体路径修改

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <style type="text/css">
 @font-face {
 	font-family: digit;
-	src: url('https://blog-1305951218.cos.ap-shanghai.myqcloud.com/ttf/love/digital-7_mono.ttf') format("truetype");
+	src: url('https://blog-1305951218.cos.ap-shanghai.myqcloud.com/love/digital-7_mono.ttf') format("truetype");
 }
 </style>
 <link rel="shortcut icon" href="https://blog-1305951218.cos.ap-shanghai.myqcloud.com/love/icon/aini.ico">
