取消网站背景音乐

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="https://blog-1305951218.cos.ap-shanghai.myqcloud.com/love/js/jquery.js"></script>
 <script type="text/javascript" src="https://blog-1305951218.cos.ap-shanghai.myqcloud.com/love/js/garden.js"></script>
 <script type="text/javascript" src="https://blog-1305951218.cos.ap-shanghai.myqcloud.com/love/js/functions.js"></script>
-<script src="https://blog-1305951218.cos.ap-shanghai.myqcloud.com/blog/js/wangZhanBeiJingYinYue.js"></script>
+<!--<script src="https://blog-1305951218.cos.ap-shanghai.myqcloud.com/blog/js/wangZhanBeiJingYinYue.js"></script>-->
 
 
 </head>
