--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					boy~糖果  girl~？？<br/>
+					boy~小马哥哥  girl~？？<br/>
 				</div>
 			</div>
 			<div style="position: fixed;bottom:5px;right:10px; font-family: 'sans-serif';font-size: 16px;color: #666;">
