--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 <script type="text/javascript" src="./js/functions.js"></script>
 
 
+	<!-- 51la应用监控-->
+	<script src="https://sdk.51.la/perf/js-sdk-perf.min.js" crossorigin="anonymous"></script>
+	<script>
+		new LingQue.Monitor().init({id:"3MU6wqxiqJaP5OV2",sendSuspicious:true,sendSpaPv:true});
+	</script>
+	<!-- 51la网站数据统计-->
+	<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+	<script>LA.init({id:"3MU79oav8Tu9kZvF",ck:"3MU79oav8Tu9kZvF",autoTrack:true,hashMode:true,screenRecord:true})</script>
+
 </head>
 
 <body>
