--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 <script type="text/javascript" src="./js/functions.js"></script>
 
 
-	<!-- 51la应用监控-->
-	<script src="https://sdk.51.la/perf/js-sdk-perf.min.js" crossorigin="anonymous"></script>
-	<script>
-		new LingQue.Monitor().init({id:"3MU6wqxiqJaP5OV2",sendSuspicious:true,sendSpaPv:true});
+	<!--微软Clarity网站统计-->
+	<script type="text/javascript">
+		(function(c,l,a,r,i,t,y){
+			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+			t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+		})(window, document, "clarity", "script", "ryvxl1aurj");
 	</script>
-	<!-- 51la网站数据统计-->
-	<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-	<script>LA.init({id:"3MU79oav8Tu9kZvF",ck:"3MU79oav8Tu9kZvF",autoTrack:true,hashMode:true,screenRecord:true})</script>
 
 </head>
 
