--- a/index.html
+++ b/index.html
@@ -20,13 +20,19 @@
 <script type="text/javascript" src="./js/functions.js"></script>
 
 
-	<!--微软Clarity网站统计-->
-	<script type="text/javascript">
-		(function(c,l,a,r,i,t,y){
-			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-			t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-		})(window, document, "clarity", "script", "ryvxl1aurj");
+	<!--51la数据统计-->
+	<script>
+		!function(p){"use strict";!function(t){var s=window,e=document,i=p,c="".concat("https:"===e.location.protocol?"https://":"http://","sdk.51.la/js-sdk-pro.min.js"),n=e.createElement("script"),r=e.getElementsByTagName("script")[0];n.type="text/javascript",n.setAttribute("charset","UTF-8"),n.async=!0,n.src=c,n.id="LA_COLLECT",i.d=n;var o=function(){s.LA.ids.push(i)};s.LA?s.LA.ids&&o():(s.LA=p,s.LA.ids=[],o()),r.parentNode.insertBefore(n,r)}()}({id:"3MU79oav8Tu9kZvF",ck:"3MU79oav8Tu9kZvF",autoTrack:true,hashMode:true,screenRecord:true});
+	</script>
+	<!--51la性能监控-->
+	<script>
+		!(function(c,i,e,b){
+			var h=i.createElement("script");
+			var f=i.getElementsByTagName("script")[0];
+			h.type="text/javascript";
+			h.crossorigin=true;
+			h.onload=function(){new c[b]["Monitor"]().init({id:"3MU6wqxiqJaP5OV2",sendSuspicious:true,sendSpaPv:true});};
+			f.parentNode.insertBefore(h,f);h.src=e;})(window,document,"https://sdk.51.la/perf/js-sdk-perf.min.js","LingQue");
 	</script>
 
 </head>
