--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="Keywords" Content="我们的爱情沙漏 ">
   <meta NAME="Description" CONTENT="时光沙漏">
 <!--<title>婷宝</title>-->
-<title>FUCK YOU</title>
+<title>糖果梦Love</title>
 
 <style type="text/css">
 @font-face {
