--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	src: url('./ttf/digital-7_mono.ttf') format("truetype");
 }
 </style>
-<link rel="shortcut icon" href="./icon/aini.ico">
+<!--<link rel="shortcut icon" href="./icon/aini.ico">-->
+<link rel="icon" type="image/x-icon" href="./icon/tgmenmglogo.png">
 <link href="./css/default.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="./js/jquery.js"></script>
 <script type="text/javascript" src="./js/garden.js"></script>
